<resources>
    <string name="app_name">Autonomia</string>

    <string name="autonomia_atual">Autonomia Atual:</string>
    <string name="textview1">TextView</string>
    <string name="adicionar_abastecimento">Adicionar Abastecimento</string>
    <string name="visualisar_abastecimentos">Visualisar Abastecimentos</string>
    <string name="km_l">km/L</string>
    <string name="confirmar">Confirmar</string>
    <string name="data_do_abastecimento">Data do Abastecimento:</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="km">Km:</string>
    <string name="litros">Litros:</string>
    <string name="posto">Posto:</string>
    <string name="litros_abastecidos">Litros Abastecidos:</string>
    <string name="quilometragem_atual">Quilometragem Atual:</string>

    <string-array name="posto_array">
        <item>Selecione um posto</item>
        <item>Ipiranga</item>
        <item>Petrobras</item>
        <item>Shell</item>
        <item>Texaco</item>
        <item>Outro</item>
    </string-array>

</resources>
